fixed submit button in wrong position

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,7 +56,7 @@ button {
 }
 
 button {
-  position:absolute;
+  display:block;
   right:0;
   top:0;
 }
